<resources>
    <string name="app_name">My Recipe Puppy</string>

    <string name="welcome">You need search some ingredient for see recipes</string>

    <string name="emptyList">Don\'t have recipes for this ingredients.\nPlease, try again.</string>
    <string name="noMoreRecipes">Don\'t have more recipes for this ingredients</string>
    <string name="noInternetConectionError">Please, check you Internet connection.</string>
    <string name="unknownException">There was an error.\nPlease, try again.</string>

    <string name="favorite_title">My favorite recipes</string>
    <string name="save_favorite">Save in favorites</string>

    <string name="favorite_saved">Recipe saved!</string>

    <string name="emptyFavorites">Don\'t have any recipe saved</string>

    <string name="favorites">Show favorites</string>
    <string name="search">Search</string>
    <string name="search_hint">Search by ingredients</string>
</resources>
