...
                android:padding="@dimen/margin_10dp"
                android:layout_below="@id/recipe_image">
            <TextView
                    android:id="@+id/recipe_name"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_toStartOf="@id/recipe_addfavorite"
                    tools:text="Title of recipe"
                    style="@style/title"/>

            <ImageView
                    android:id="@+id/recipe_addfavorite"
                    android:layout_width="wrap_content"
...
                    tools:text="onions, garlic, milk"
                    android:layout_below="@+id/recipe_name"
                    style="@style/subtitle"/>
        </RelativeLayout>

        <ImageView
                android:id="@+id/recipe_haslactose"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:src="@mipmap/haslactose_green"
                android:rotation="45"
                android:elevation="@dimen/margin_5dp"
                android:layout_marginTop="@dimen/margin_30dp"
...
